docs(cs/issue): compose-variable-resolution-timing — B2 전환·사례 보강